force-app/main/default/objects/Carrier_Order_Line_Item__c/fields/Benefit_Types__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Types__c</fullName>
    <label>Benefit Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Long Term Disability</fullName>
            </value>
            <value>
                <fullName>Flexible Spending Account - Medical</fullName>
            </value>
            <value>
                <fullName>Flexible Spending Account - Dependent Care</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Commuter</fullName>
            </value>
            <value>
                <fullName>Short Term Disability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>