force-app/main/default/objects/Carrier_Order_Line_Item__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <label>Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>