force-app/main/default/objects/Carrier_Order_Line_Item__c/fields/HI_Carrier_Information_Id__c.field-meta.xml
<CustomField>
    <fullName>HI_Carrier_Information_Id__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>HI Carrier Information Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>