force-app/main/default/objects/Carrier_Order_Line_Item__c/fields/Number_Of_Collected_Documents__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Collected_Documents__c</fullName>
    <description>Total Documents Collected</description>
    <label>Number Of Collected Documents</label>
    <summaryFilterItems>
        <field>BOR_Checklist__c.IsCheckPointImplemented__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>BOR_Checklist__c.Non_TADA_Type__c</field>
        <operation>notEqual</operation>
        <value>Nice to Have (Order CAN push withOut)</value>
    </summaryFilterItems>
    <summaryForeignKey>BOR_Checklist__c.Carrier_Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>