force-app/main/default/objects/Carrier_Order_Line_Item__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>