force-app/main/default/objects/Carrier_Order_Line_Item__c/fields/Secondary_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Policy_Number__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>