force-app/main/default/objects/Carrier_Order_Line_Item__c/fields/TADA_TPA__c.field-meta.xml
<CustomField>
    <fullName>TADA_TPA__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TADA TPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>