force-app/main/default/objects/Carrier_Order_Line_Item__c/fields/Total_Number_Of_Documents__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Documents__c</fullName>
    <description>Total Number of Documents in CheckList</description>
    <label>Total Number Of Documents</label>
    <summaryFilterItems>
        <field>BOR_Checklist__c.Non_TADA_Type__c</field>
        <operation>notEqual</operation>
        <value>Nice to Have (Order CAN push withOut)</value>
    </summaryFilterItems>
    <summaryForeignKey>BOR_Checklist__c.Carrier_Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>